--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "devtools": "react-devtools"
   },
   "dependencies": {
     "react": "16.13.1",
+    "react-devtools": "^4.10.1",
     "react-native": "0.63.4"
   },
   "devDependencies": {
